// Code generated by ormgen; DO NOT EDIT.

package model

import (
	"time"

	"github.com/polyspec/orm/clients/go/orm"
)

var _ time.Time

// ServiceModuleModel is a service_module model or row.
type ServiceModuleModel struct {
	m           *orm.Core
	fSeq        int64
	fServiceSeq int64
	fName       string
}

var serviceModuleEntity = &orm.Entity{Name: "service_module", Schema: ormSchema, New: func(c *orm.Core) orm.Model { x := &ServiceModuleModel{m: c}; c.Bind(x); return x },
	Assign: func(m orm.Model, name string, v any) bool { return m.(*ServiceModuleModel).assign(name, v) },
	Value:  func(m orm.Model, name string) (any, bool) { return m.(*ServiceModuleModel).value(name) },
	Collect: func(keys []orm.Key, items map[orm.Key]*orm.Core, fetched map[orm.Key]any) any {
		return orm.CollectOf[*ServiceModuleModel](keys, items, fetched)
	},
}

// ServiceModule creates a service_module model.
func ServiceModule() *ServiceModuleModel {
	return serviceModuleEntity.New(orm.NewCore(serviceModuleEntity)).(*ServiceModuleModel)
}

func (x *ServiceModuleModel) Orm_() *orm.Core { return x.m }

// MarshalJSON writes the row values in order.
func (x *ServiceModuleModel) MarshalJSON() ([]byte, error) { return x.m.MarshalJSON() }

// ToArray returns the row values.
func (x *ServiceModuleModel) ToArray() map[string]any { return x.m.ToArray() }

func (x *ServiceModuleModel) assign(name string, v any) bool {
	switch name {
	case "seq":
		x.fSeq = orm.AsInt64(v)
	case "service_seq":
		x.fServiceSeq = orm.AsInt64(v)
	case "name":
		x.fName = orm.AsString(v)
	default:
		return false
	}
	return true
}

func (x *ServiceModuleModel) value(name string) (any, bool) {
	switch name {
	case "seq":
		return x.fSeq, true
	case "service_seq":
		return x.fServiceSeq, true
	case "name":
		return x.fName, true
	}
	return nil, false
}

// Connect sets the connection.
func (x *ServiceModuleModel) Connect(db *orm.DB) *ServiceModuleModel { x.m.Connect(db); return x }

// And joins the next condition with AND, opens an AND group with a callback,
// or places the conditions of a joined model.
func (x *ServiceModuleModel) And(args ...any) *ServiceModuleModel { return x.connector("and", args) }

// Or joins the next condition with OR, opens an OR group with a callback, or
// places the conditions of a joined model.
func (x *ServiceModuleModel) Or(args ...any) *ServiceModuleModel { return x.connector("or", args) }

func (x *ServiceModuleModel) connector(conn string, args []any) *ServiceModuleModel {
	if len(args) == 1 {
		if fn, ok := args[0].(func(*ServiceModuleModel)); ok {
			g := serviceModuleEntity.New(x.m.Group()).(*ServiceModuleModel)
			fn(g)
			x.m.AddGroup(conn, g.m)
			return x
		}
	}
	x.m.Connector(conn, args)
	return x
}

// Raw adds a raw first condition.
func (x *ServiceModuleModel) Raw(sql string, binds ...any) *ServiceModuleModel {
	x.m.Raw("", sql, binds)
	return x
}

// AndRaw adds a raw condition joined with AND.
func (x *ServiceModuleModel) AndRaw(sql string, binds ...any) *ServiceModuleModel {
	x.m.Raw("and", sql, binds)
	return x
}

// OrRaw adds a raw condition joined with OR.
func (x *ServiceModuleModel) OrRaw(sql string, binds ...any) *ServiceModuleModel {
	x.m.Raw("or", sql, binds)
	return x
}

// On sets the join ON conditions.
func (x *ServiceModuleModel) On(fn func(*ServiceModuleModel)) *ServiceModuleModel {
	g := serviceModuleEntity.New(x.m.Group()).(*ServiceModuleModel)
	fn(g)
	x.m.On(g.m)
	return x
}

// Relation attaches one related row loaded by a separate query.
func (x *ServiceModuleModel) Relation(child orm.Model) *ServiceModuleModel {
	x.m.Relation(false, child)
	return x
}

// Relations attaches related rows loaded by a separate query.
func (x *ServiceModuleModel) Relations(child orm.Model) *ServiceModuleModel {
	x.m.Relation(true, child)
	return x
}

// Get returns the first matching row. It returns orm.CodeNoRows when no row matches.
func (x *ServiceModuleModel) Get() (*ServiceModuleModel, error) { return oneServiceModule(x.m) }

func oneServiceModule(c *orm.Core) (*ServiceModuleModel, error) {
	m, err := c.Get()
	if m == nil {
		return nil, err
	}
	return m.(*ServiceModuleModel), err
}

// Gets returns the matching rows.
func (x *ServiceModuleModel) Gets() (*orm.Collection[*ServiceModuleModel], error) {
	return orm.Gets[*ServiceModuleModel](x.m)
}

// GetCount returns the number of matching rows.
func (x *ServiceModuleModel) GetCount() (int64, error) { return x.m.GetCount() }

// GetsCount returns grouped rows with row_count.
func (x *ServiceModuleModel) GetsCount() (*orm.Collection[*ServiceModuleModel], error) {
	return orm.GetsCount[*ServiceModuleModel](x.m)
}

// GetSum returns the sum of the column selected with Sum<Col>.
func (x *ServiceModuleModel) GetSum() (float64, error) { return x.m.GetSum() }

// GetAvg returns the average of the column selected with Avg<Col>.
func (x *ServiceModuleModel) GetAvg() (float64, error) { return x.m.GetAvg() }

// GetsPage returns one page of matching rows.
func (x *ServiceModuleModel) GetsPage(page, perPage int) (*orm.Page[*ServiceModuleModel], error) {
	return orm.GetsPage[*ServiceModuleModel](x.m, page, perPage)
}

// GetQuery returns the statement of Gets without executing it.
func (x *ServiceModuleModel) GetQuery() (*orm.Statement, error) { return x.m.GetQuery() }

// Create inserts the row and returns the created row.
func (x *ServiceModuleModel) Create() (*ServiceModuleModel, error) {
	m, err := x.m.Create()
	if err != nil {
		return nil, err
	}
	return m.(*ServiceModuleModel), nil
}

// Creates inserts rows in one transaction and returns the inserted row count.
func (x *ServiceModuleModel) Creates(rows []*ServiceModuleModel) (int64, error) {
	return orm.Creates(x.m, rows)
}

// Update writes the changed columns; Update(true) requires an unchanged updated time.
func (x *ServiceModuleModel) Update(optimistic ...bool) (*ServiceModuleModel, error) {
	if err := x.m.Update(optimistic); err != nil {
		return nil, err
	}
	return x, nil
}

// Save updates the row when its primary key is known, otherwise creates it.
func (x *ServiceModuleModel) Save() (*ServiceModuleModel, error) {
	m, err := x.m.Save()
	if err != nil {
		return nil, err
	}
	return m.(*ServiceModuleModel), nil
}

// Delete deletes the row; Delete(true) first deletes loaded related rows.
func (x *ServiceModuleModel) Delete(recursive ...bool) error { return x.m.Delete(recursive) }

// Duplication sets the duplicate-key update of the next Create.
func (x *ServiceModuleModel) Duplication(m *ServiceModuleModel) *ServiceModuleModel {
	x.m.Duplication(m)
	return x
}

// Limit sets the row range.
func (x *ServiceModuleModel) Limit(offset, count int) *ServiceModuleModel {
	x.m.Limit(offset, count)
	return x
}

// OrderByRandom orders rows randomly.
func (x *ServiceModuleModel) OrderByRandom() *ServiceModuleModel { x.m.OrderByRandom(); return x }

// OrderByRaw appends a raw order expression.
func (x *ServiceModuleModel) OrderByRaw(sql string) *ServiceModuleModel {
	x.m.OrderByRaw(sql)
	return x
}

// GroupByRaw appends a raw grouping expression.
func (x *ServiceModuleModel) GroupByRaw(sql string) *ServiceModuleModel {
	x.m.GroupByRaw(sql)
	return x
}

// RemoveAllColumns keeps only primary and foreign keys.
func (x *ServiceModuleModel) RemoveAllColumns() *ServiceModuleModel { x.m.RemoveAllColumns(); return x }

// AddAllColumns selects every column.
func (x *ServiceModuleModel) AddAllColumns() *ServiceModuleModel { x.m.AddAllColumns(); return x }

// ParentNode merges the related row into the parent row.
func (x *ServiceModuleModel) ParentNode() *ServiceModuleModel { x.m.ParentNode(); return x }

// GroupLimit limits related rows per parent.
func (x *ServiceModuleModel) GroupLimit(n int) *ServiceModuleModel { x.m.GroupLimit(n); return x }

// DeleteLock excludes the relation from recursive delete.
func (x *ServiceModuleModel) DeleteLock() *ServiceModuleModel { x.m.DeleteLock(); return x }

// FetchKey computes the collection key of each row.
func (x *ServiceModuleModel) FetchKey(fn func(*ServiceModuleModel) any) *ServiceModuleModel {
	x.m.FetchKey(func(m orm.Model) any { return fn(m.(*ServiceModuleModel)) })
	return x
}

// FetchValue computes a value for each loaded row.
func (x *ServiceModuleModel) FetchValue(fn func(*ServiceModuleModel) any) *ServiceModuleModel {
	x.m.FetchValue(func(m orm.Model) any { return fn(m.(*ServiceModuleModel)) })
	return x
}

// ForUpdate locks the selected rows for update inside a transaction.
func (x *ServiceModuleModel) ForUpdate() *ServiceModuleModel { x.m.Lock("update"); return x }

// ForShare locks the selected rows for share inside a transaction.
func (x *ServiceModuleModel) ForShare() *ServiceModuleModel { x.m.Lock("share"); return x }

// ForUpdateNoWait locks for update without waiting.
func (x *ServiceModuleModel) ForUpdateNoWait() *ServiceModuleModel {
	x.m.Lock("update_nowait")
	return x
}

// ForShareNoWait locks for share without waiting.
func (x *ServiceModuleModel) ForShareNoWait() *ServiceModuleModel { x.m.Lock("share_nowait"); return x }

// GetSeq returns seq.
func (x *ServiceModuleModel) GetSeq() int64 { return x.fSeq }

// SetSeq sets seq.
func (x *ServiceModuleModel) SetSeq(v int64) *ServiceModuleModel {
	x.fSeq = v
	x.m.Set("seq", v)
	return x
}

func (x *ServiceModuleModel) SetRawSeq(sql string, binds ...any) *ServiceModuleModel {
	x.m.SetRaw("seq", sql, binds)
	return x
}
func (x *ServiceModuleModel) AddColumnSeq() *ServiceModuleModel    { x.m.AddColumn("seq"); return x }
func (x *ServiceModuleModel) RemoveColumnSeq() *ServiceModuleModel { x.m.RemoveColumn("seq"); return x }
func (x *ServiceModuleModel) GroupBySeq() *ServiceModuleModel      { x.m.GroupBy("seq"); return x }
func (x *ServiceModuleModel) KeyNameSeq() *ServiceModuleModel      { x.m.KeyName("seq"); return x }
func (x *ServiceModuleModel) OrderBySeqAsc(fn ...orm.Func) *ServiceModuleModel {
	x.m.OrderBy("seq", false, fn)
	return x
}
func (x *ServiceModuleModel) OrderBySeqDesc(fn ...orm.Func) *ServiceModuleModel {
	x.m.OrderBy("seq", true, fn)
	return x
}
func (x *ServiceModuleModel) PlusSeq(n int64) *ServiceModuleModel  { x.m.Plus("seq", n); return x }
func (x *ServiceModuleModel) MinusSeq(n int64) *ServiceModuleModel { x.m.Minus("seq", n); return x }
func (x *ServiceModuleModel) SumSeq() *ServiceModuleModel          { x.m.Aggregate("sum", "seq"); return x }
func (x *ServiceModuleModel) AvgSeq() *ServiceModuleModel          { x.m.Aggregate("avg", "seq"); return x }

// GetServiceSeq returns service_seq.
func (x *ServiceModuleModel) GetServiceSeq() int64 { return x.fServiceSeq }

// SetServiceSeq sets service_seq.
func (x *ServiceModuleModel) SetServiceSeq(v int64) *ServiceModuleModel {
	x.fServiceSeq = v
	x.m.Set("service_seq", v)
	return x
}

func (x *ServiceModuleModel) SetRawServiceSeq(sql string, binds ...any) *ServiceModuleModel {
	x.m.SetRaw("service_seq", sql, binds)
	return x
}
func (x *ServiceModuleModel) AddColumnServiceSeq() *ServiceModuleModel {
	x.m.AddColumn("service_seq")
	return x
}
func (x *ServiceModuleModel) RemoveColumnServiceSeq() *ServiceModuleModel {
	x.m.RemoveColumn("service_seq")
	return x
}
func (x *ServiceModuleModel) GroupByServiceSeq() *ServiceModuleModel {
	x.m.GroupBy("service_seq")
	return x
}
func (x *ServiceModuleModel) KeyNameServiceSeq() *ServiceModuleModel {
	x.m.KeyName("service_seq")
	return x
}
func (x *ServiceModuleModel) OrderByServiceSeqAsc(fn ...orm.Func) *ServiceModuleModel {
	x.m.OrderBy("service_seq", false, fn)
	return x
}
func (x *ServiceModuleModel) OrderByServiceSeqDesc(fn ...orm.Func) *ServiceModuleModel {
	x.m.OrderBy("service_seq", true, fn)
	return x
}
func (x *ServiceModuleModel) PlusServiceSeq(n int64) *ServiceModuleModel {
	x.m.Plus("service_seq", n)
	return x
}
func (x *ServiceModuleModel) MinusServiceSeq(n int64) *ServiceModuleModel {
	x.m.Minus("service_seq", n)
	return x
}
func (x *ServiceModuleModel) SumServiceSeq() *ServiceModuleModel {
	x.m.Aggregate("sum", "service_seq")
	return x
}
func (x *ServiceModuleModel) AvgServiceSeq() *ServiceModuleModel {
	x.m.Aggregate("avg", "service_seq")
	return x
}

// GetName returns name.
func (x *ServiceModuleModel) GetName() string { return x.fName }

// SetName sets name.
func (x *ServiceModuleModel) SetName(v string) *ServiceModuleModel {
	x.fName = v
	x.m.Set("name", v)
	return x
}

func (x *ServiceModuleModel) SetRawName(sql string, binds ...any) *ServiceModuleModel {
	x.m.SetRaw("name", sql, binds)
	return x
}
func (x *ServiceModuleModel) AddColumnName() *ServiceModuleModel { x.m.AddColumn("name"); return x }
func (x *ServiceModuleModel) RemoveColumnName() *ServiceModuleModel {
	x.m.RemoveColumn("name")
	return x
}
func (x *ServiceModuleModel) GroupByName() *ServiceModuleModel { x.m.GroupBy("name"); return x }
func (x *ServiceModuleModel) KeyNameName() *ServiceModuleModel { x.m.KeyName("name"); return x }
func (x *ServiceModuleModel) OrderByNameAsc(fn ...orm.Func) *ServiceModuleModel {
	x.m.OrderBy("name", false, fn)
	return x
}
func (x *ServiceModuleModel) OrderByNameDesc(fn ...orm.Func) *ServiceModuleModel {
	x.m.OrderBy("name", true, fn)
	return x
}

func (x *ServiceModuleModel) AliasModule() *ServiceModuleModel { x.m.Alias("Module"); return x }

func (x *ServiceModuleModel) MatchServiceModuleSeqWithSeq() *ServiceModuleModel {
	x.m.Match("service_module_seq", "seq")
	return x
}

func (x *ServiceModuleModel) PossibleIsClose(v any) *ServiceModuleModel {
	x.m.Possible("is_close", v)
	return x
}
