<?php
// Code generated by orm-gen; DO NOT EDIT.
declare(strict_types=1);

namespace App\Orm;

use Orm\Model;

/** A account model or row. */
final class Account extends Model
{
    public static function meta(): array
    {
        static $meta = null;
        return $meta ??= [
            'entity' => 'account',
            'table' => 'account',
            'pk' => ['seq'],
            'auto' => 'seq',
            'updated' => '',
            'aes_version' => '',
            'columns' => [
                'seq' => ['type' => 'i64', 'nullable' => false, 'styles' => []],
                'name' => ['type' => 'string', 'nullable' => false, 'styles' => []],
            ],
            'fulltext' => [],
            'indexes' => [],
        ];
    }

    public function getSeq(): int
    {
        return $this->readColumn('seq');
    }

    public function setSeq(int $v): static
    {
        return $this->writeColumn('seq', $v);
    }

    public function getName(): string
    {
        return $this->readColumn('name');
    }

    public function setName(string $v): static
    {
        return $this->writeColumn('name', $v);
    }
}
