<?php
// Code generated by orm-gen; DO NOT EDIT.
declare(strict_types=1);

namespace App\Orm;

use Orm\Model;

/** A battle model or row. */
final class Battle extends Model
{
    public static function meta(): array
    {
        static $meta = null;
        return $meta ??= [
            'entity' => 'battle',
            'table' => 'battle',
            'pk' => ['seq'],
            'auto' => 'seq',
            'updated' => 'updated_ts',
            'aes_version' => 'aes_key_version',
            'columns' => [
                'seq' => ['type' => 'i64', 'nullable' => false, 'styles' => []],
                'name' => ['type' => 'string', 'nullable' => false, 'styles' => []],
                'description' => ['type' => 'text', 'nullable' => true, 'styles' => []],
                'created_ts' => ['type' => 'datetime', 'nullable' => false, 'styles' => []],
                'updated_ts' => ['type' => 'datetime', 'nullable' => false, 'styles' => []],
                'is_close' => ['type' => 'bool', 'nullable' => false, 'styles' => []],
                'is_display' => ['type' => 'bool', 'nullable' => false, 'styles' => []],
                'display_start_dt' => ['type' => 'datetime', 'nullable' => true, 'styles' => []],
                'display_end_dt' => ['type' => 'datetime', 'nullable' => true, 'styles' => []],
                'is_allday' => ['type' => 'bool', 'nullable' => false, 'styles' => []],
                'target_team_player_count' => ['type' => 'i64', 'nullable' => false, 'styles' => []],
                'success_count' => ['type' => 'i64', 'nullable' => false, 'styles' => []],
                'player_count' => ['type' => 'i64', 'nullable' => false, 'styles' => []],
                'read_count' => ['type' => 'i64', 'nullable' => false, 'styles' => []],
                'cover_url' => ['type' => 'string', 'nullable' => true, 'styles' => []],
                'user_seq' => ['type' => 'i64', 'nullable' => false, 'styles' => []],
                'service_seq' => ['type' => 'i64', 'nullable' => false, 'styles' => []],
                'service_module_seq' => ['type' => 'i64', 'nullable' => false, 'styles' => []],
                'service_member_seq' => ['type' => 'i64', 'nullable' => false, 'styles' => []],
                'start_dt' => ['type' => 'datetime', 'nullable' => false, 'styles' => []],
                'end_dt' => ['type' => 'datetime', 'nullable' => false, 'styles' => []],
                'uuid' => ['type' => 'string', 'nullable' => true, 'styles' => []],
                'is_single_play' => ['type' => 'bool', 'nullable' => false, 'styles' => []],
                'like_count' => ['type' => 'i64', 'nullable' => false, 'styles' => []],
                'aes_key_version' => ['type' => 'i32', 'nullable' => false, 'styles' => []],
                'aes_hex_email' => ['type' => 'string', 'nullable' => true, 'styles' => ['aes', 'hex']],
                'email_blind_index' => ['type' => 'string', 'nullable' => true, 'styles' => []],
                'aes_hex_phone' => ['type' => 'string', 'nullable' => true, 'styles' => ['aes', 'hex']],
                'phone_blind_index' => ['type' => 'string', 'nullable' => true, 'styles' => []],
                'price' => ['type' => 'decimal', 'nullable' => true, 'styles' => []],
                'ip' => ['type' => 'inet', 'nullable' => true, 'styles' => ['ip']],
                'gz_extend' => ['type' => 'bytes', 'nullable' => true, 'styles' => ['serialize', 'gz']],
                'json_setting' => ['type' => 'jsontext', 'nullable' => true, 'styles' => ['json']],
                'jsons_tags' => ['type' => 'jsontext', 'nullable' => true, 'styles' => ['jsons']],
                'base64_extra' => ['type' => 'text', 'nullable' => true, 'styles' => ['serialize', 'base64']],
                'serialize_data' => ['type' => 'text', 'nullable' => true, 'styles' => ['serialize']],
            ],
            'fulltext' => [['name', 'description']],
            'indexes' => ['ik', 'ix_email_blind_index', 'ix_phone_blind_index', 'ix_service', 'ix_user'],
        ];
    }

    public function getSeq(): int
    {
        return $this->readColumn('seq');
    }

    public function setSeq(int $v): static
    {
        return $this->writeColumn('seq', $v);
    }

    public function getName(): string
    {
        return $this->readColumn('name');
    }

    public function setName(string $v): static
    {
        return $this->writeColumn('name', $v);
    }

    public function getDescription(): ?string
    {
        return $this->readColumn('description');
    }

    public function setDescription(?string $v): static
    {
        return $this->writeColumn('description', $v);
    }

    public function getCreatedTs(): \DateTimeImmutable
    {
        return $this->readColumn('created_ts');
    }

    public function setCreatedTs(\DateTimeInterface $v): static
    {
        return $this->writeColumn('created_ts', \DateTimeImmutable::createFromInterface($v));
    }

    public function getUpdatedTs(): \DateTimeImmutable
    {
        return $this->readColumn('updated_ts');
    }

    public function setUpdatedTs(\DateTimeInterface $v): static
    {
        return $this->writeColumn('updated_ts', \DateTimeImmutable::createFromInterface($v));
    }

    public function getIsClose(): bool
    {
        return $this->readColumn('is_close');
    }

    public function setIsClose(bool $v): static
    {
        return $this->writeColumn('is_close', $v);
    }

    public function getIsDisplay(): bool
    {
        return $this->readColumn('is_display');
    }

    public function setIsDisplay(bool $v): static
    {
        return $this->writeColumn('is_display', $v);
    }

    public function getDisplayStartDt(): ?\DateTimeImmutable
    {
        return $this->readColumn('display_start_dt');
    }

    public function setDisplayStartDt(?\DateTimeInterface $v): static
    {
        return $this->writeColumn('display_start_dt', $v === null ? null : \DateTimeImmutable::createFromInterface($v));
    }

    public function getDisplayEndDt(): ?\DateTimeImmutable
    {
        return $this->readColumn('display_end_dt');
    }

    public function setDisplayEndDt(?\DateTimeInterface $v): static
    {
        return $this->writeColumn('display_end_dt', $v === null ? null : \DateTimeImmutable::createFromInterface($v));
    }

    public function getIsAllday(): bool
    {
        return $this->readColumn('is_allday');
    }

    public function setIsAllday(bool $v): static
    {
        return $this->writeColumn('is_allday', $v);
    }

    public function getTargetTeamPlayerCount(): int
    {
        return $this->readColumn('target_team_player_count');
    }

    public function setTargetTeamPlayerCount(int $v): static
    {
        return $this->writeColumn('target_team_player_count', $v);
    }

    public function getSuccessCount(): int
    {
        return $this->readColumn('success_count');
    }

    public function setSuccessCount(int $v): static
    {
        return $this->writeColumn('success_count', $v);
    }

    public function getPlayerCount(): int
    {
        return $this->readColumn('player_count');
    }

    public function setPlayerCount(int $v): static
    {
        return $this->writeColumn('player_count', $v);
    }

    public function getReadCount(): int
    {
        return $this->readColumn('read_count');
    }

    public function setReadCount(int $v): static
    {
        return $this->writeColumn('read_count', $v);
    }

    public function getCoverUrl(): ?string
    {
        return $this->readColumn('cover_url');
    }

    public function setCoverUrl(?string $v): static
    {
        return $this->writeColumn('cover_url', $v);
    }

    public function getUserSeq(): int
    {
        return $this->readColumn('user_seq');
    }

    public function setUserSeq(int $v): static
    {
        return $this->writeColumn('user_seq', $v);
    }

    public function getServiceSeq(): int
    {
        return $this->readColumn('service_seq');
    }

    public function setServiceSeq(int $v): static
    {
        return $this->writeColumn('service_seq', $v);
    }

    public function getServiceModuleSeq(): int
    {
        return $this->readColumn('service_module_seq');
    }

    public function setServiceModuleSeq(int $v): static
    {
        return $this->writeColumn('service_module_seq', $v);
    }

    public function getServiceMemberSeq(): int
    {
        return $this->readColumn('service_member_seq');
    }

    public function setServiceMemberSeq(int $v): static
    {
        return $this->writeColumn('service_member_seq', $v);
    }

    public function getStartDt(): \DateTimeImmutable
    {
        return $this->readColumn('start_dt');
    }

    public function setStartDt(\DateTimeInterface $v): static
    {
        return $this->writeColumn('start_dt', \DateTimeImmutable::createFromInterface($v));
    }

    public function getEndDt(): \DateTimeImmutable
    {
        return $this->readColumn('end_dt');
    }

    public function setEndDt(\DateTimeInterface $v): static
    {
        return $this->writeColumn('end_dt', \DateTimeImmutable::createFromInterface($v));
    }

    public function getUuid(): ?string
    {
        return $this->readColumn('uuid');
    }

    public function setUuid(?string $v): static
    {
        return $this->writeColumn('uuid', $v);
    }

    public function getIsSinglePlay(): bool
    {
        return $this->readColumn('is_single_play');
    }

    public function setIsSinglePlay(bool $v): static
    {
        return $this->writeColumn('is_single_play', $v);
    }

    public function getLikeCount(): int
    {
        return $this->readColumn('like_count');
    }

    public function setLikeCount(int $v): static
    {
        return $this->writeColumn('like_count', $v);
    }

    public function getAesKeyVersion(): int
    {
        return $this->readColumn('aes_key_version');
    }

    public function setAesKeyVersion(int $v): static
    {
        return $this->writeColumn('aes_key_version', $v);
    }

    public function getAesHexEmail(): ?string
    {
        return $this->readColumn('aes_hex_email');
    }

    public function setAesHexEmail(?string $v): static
    {
        return $this->writeColumn('aes_hex_email', $v);
    }

    public function getEmailBlindIndex(): ?string
    {
        return $this->readColumn('email_blind_index');
    }

    public function setEmailBlindIndex(?string $v): static
    {
        return $this->writeColumn('email_blind_index', $v);
    }

    public function getAesHexPhone(): ?string
    {
        return $this->readColumn('aes_hex_phone');
    }

    public function setAesHexPhone(?string $v): static
    {
        return $this->writeColumn('aes_hex_phone', $v);
    }

    public function getPhoneBlindIndex(): ?string
    {
        return $this->readColumn('phone_blind_index');
    }

    public function setPhoneBlindIndex(?string $v): static
    {
        return $this->writeColumn('phone_blind_index', $v);
    }

    public function getPrice(): ?float
    {
        return $this->readColumn('price');
    }

    public function setPrice(?float $v): static
    {
        return $this->writeColumn('price', $v);
    }

    public function getIp(): ?string
    {
        return $this->readColumn('ip');
    }

    public function setIp(?string $v): static
    {
        return $this->writeColumn('ip', $v);
    }

    public function getGzExtend(): mixed
    {
        return $this->readColumn('gz_extend');
    }

    public function setGzExtend(mixed $v): static
    {
        return $this->writeColumn('gz_extend', $v);
    }

    public function getJsonSetting(): mixed
    {
        return $this->readColumn('json_setting');
    }

    public function setJsonSetting(mixed $v): static
    {
        return $this->writeColumn('json_setting', $v);
    }

    public function getJsonsTags(): mixed
    {
        return $this->readColumn('jsons_tags');
    }

    public function setJsonsTags(mixed $v): static
    {
        return $this->writeColumn('jsons_tags', $v);
    }

    public function getBase64Extra(): mixed
    {
        return $this->readColumn('base64_extra');
    }

    public function setBase64Extra(mixed $v): static
    {
        return $this->writeColumn('base64_extra', $v);
    }

    public function getSerializeData(): mixed
    {
        return $this->readColumn('serialize_data');
    }

    public function setSerializeData(mixed $v): static
    {
        return $this->writeColumn('serialize_data', $v);
    }
}
