<?php
// Code generated by orm-gen; DO NOT EDIT.
declare(strict_types=1);

namespace App\Orm;

use Orm\Model;

/** A task model or row. */
final class Task extends Model
{
    public static function meta(): array
    {
        static $meta = null;
        return $meta ??= [
            'entity' => 'task',
            'table' => 'task',
            'pk' => ['seq'],
            'auto' => 'seq',
            'updated' => '',
            'aes_version' => '',
            'columns' => [
                'seq' => ['type' => 'i64', 'nullable' => false, 'styles' => []],
                'title' => ['type' => 'string', 'nullable' => false, 'styles' => []],
                'state' => ['type' => 'enum', 'nullable' => false, 'styles' => []],
            ],
            'fulltext' => [],
            'indexes' => [],
        ];
    }

    public function getSeq(): int
    {
        return $this->readColumn('seq');
    }

    public function setSeq(int $v): static
    {
        return $this->writeColumn('seq', $v);
    }

    public function getTitle(): string
    {
        return $this->readColumn('title');
    }

    public function setTitle(string $v): static
    {
        return $this->writeColumn('title', $v);
    }

    public function getState(): string
    {
        return $this->readColumn('state');
    }

    public function setState(string $v): static
    {
        return $this->writeColumn('state', $v);
    }
}
