erDiagram
  battle {
    bigint        seq                      PK  "auto"
    varchar(191)  name
    text          description                  "?"
    datetime(6)   created_ts                   "=now"
    datetime(6)   updated_ts                   "=now onupdate"
    tinyint       is_close                     "=0"
    tinyint       is_display                   "=0"
    datetime(6)   display_start_dt             "?"
    datetime(6)   display_end_dt               "?"
    tinyint       is_allday                    "=0"
    int           target_team_player_count     "=0 unsigned"
    int           success_count                "=0 unsigned"
    int           player_count                 "=0 unsigned"
    int           read_count                   "=0 unsigned"
    varchar(191)  cover_url                    "?"
    bigint        user_seq                 FK
    bigint        service_seq              FK
    bigint        service_module_seq       FK
    bigint        service_member_seq       FK
    datetime(6)   start_dt
    datetime(6)   end_dt
    varchar(36)   uuid                     UK  "?"
    tinyint       is_single_play               "=0"
    int           like_count                   "=0 unsigned"
    int           aes_key_version              "=1"
    varchar(255)  aes_hex_email                "?"
    char(64)      email_blind_index            "? lazy"
    varchar(255)  aes_hex_phone                "?"
    char(64)      phone_blind_index            "? lazy"
    decimal(13_3) price                        "?"
    varbinary(16) ip                           "?"
    blob          gz_extend                    "?"
    jsontext      json_setting                 "?"
    jsontext      jsons_tags                   "?"
    text          base64_extra                 "?"
    text          serialize_data               "?"
  }
  user {
    bigint        seq   PK "auto"
    varchar(191)  name
  }
  service {
    bigint        seq   PK "auto"
    varchar(191)  name
  }
  service_module {
    bigint        seq   PK "auto"
    bigint        service_seq FK
    varchar(191)  name
  }
  service_member {
    bigint        seq   PK "auto"
    bigint        service_seq FK
    bigint        user_seq    FK
  }
  composite_account {
    bigint        tenant_id PK
    bigint        account_id PK
    varchar(191)  name
  }
  composite_membership {
    bigint        tenant_id PK, FK
    bigint        account_id PK, FK
    varchar(191)  role
  }
  soft_record {
    bigint        seq PK "auto"
    varchar(191)  name
    datetime(6)   deleted_at "?"
  }
  account {
    bigint        seq PK "auto"
    varchar(191)  name
  }
  project {
    bigint        seq PK "auto"
    varchar(191)  name
  }
  account_project {
    bigint        account_seq PK, FK "-> account.seq"
    bigint        project_seq PK, FK "-> project.seq"
  }
  task {
    bigint        seq   PK "auto"
    varchar(191)  title
    enum(open_done) state
  }

  user           ||--o{ battle         : user_seq
  service        ||--o{ battle         : service_seq
  service_module ||--o{ battle         : service_module_seq
  service_member ||--o{ battle         : service_member_seq
  service        ||--o{ service_module : service_seq
  service        ||--o{ service_member : service_seq
  user           ||--o{ service_member : user_seq
  composite_account ||--o{ composite_membership : "(tenant_id, account_id) (account / memberships) cascade"

  %% index battle (service_module_seq, is_close, is_display, is_allday) ik
  %% index battle (service_seq, is_close) ix_service
  %% index battle (user_seq, is_close) ix_user
  %% index battle (email_blind_index) ix_email_blind_index
  %% index battle (phone_blind_index) ix_phone_blind_index
  %% blind_index battle aes_hex_email email_blind_index
  %% blind_index battle aes_hex_phone phone_blind_index
  %% fulltext battle (name, description)
  %% soft_delete soft_record deleted_at
